--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
+    "noEmitOnError": true,
+    "removeComments": true, 
+    //"strictNullChecks": true, 
+    "noImplicitAny": true,
     "typeRoots": [
       "node_modules/@types"
     ],
